--- a/styles/work.css
+++ b/styles/work.css
@@ -1,3 +1,7 @@
+* {
+    margin: 15px;
+}
+
 .header {
     background-image: url('../images/Anika/20190214_164127.jpg');
     color: azure;
@@ -5,6 +9,7 @@
     background-repeat: no-repeat;
     /* background-color: blueviolet; */
     background-blend-mode: multiply;
+    padding-top: 15px;
 
 }
 
@@ -12,4 +17,10 @@
     text-align: center;
     font-size: 30px;
     font-weight: 700;
+}
+
+.cover {
+    width: 75%;
+    height: 50%;
+
 }
